# stemi_prediction_api

./:  Procfile  Dockerfile  app.py  build_test_dataset.py  dataloader.py  delete.py  model.py  prediction.py  pyproject.toml  replit.nix  requirements.txt  upload.py
data/: Test_metadata.csv  test_data.h5
data/Test_data/1/: 1.hea
