[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.9"
dependencies = [
    "gunicorn==20.1.0",
    "h5py>=3.12.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "requests==2.28.2",
    "scipy==1.10.1",
    "streamlit==1.24.0",
    "torch==2.6.0",
    "tqdm>=4.67.1",
    "wfdb==4.2.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
